--- a/ProjectOOPTeam14/ProjectOOPTeam14.vcxproj
+++ b/ProjectOOPTeam14/ProjectOOPTeam14.vcxproj
@@ -141,11 +141,14 @@
   <ItemGroup>
     <ClCompile Include="Item.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Player.cpp" />
     <ClCompile Include="String.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Armor.h" />
+    <ClInclude Include="Inventory.h" />
     <ClInclude Include="Item.h" />
+    <ClInclude Include="Player.h" />
     <ClInclude Include="String.h" />
     <ClInclude Include="Vector.h" />
     <ClInclude Include="Weapon.h" />
