--- a/ProjectOOPTeam14/ProjectOOPTeam14.vcxproj.filters
+++ b/ProjectOOPTeam14/ProjectOOPTeam14.vcxproj.filters
@@ -43,6 +43,15 @@
       <Filter>Source Files\Equipment</Filter>
     </ClCompile>
     <ClCompile Include="Player.cpp">
+      <Filter>Source Files\PlayerClasses</Filter>
+    </ClCompile>
+    <ClCompile Include="Warrior.cpp">
+      <Filter>Source Files\PlayerClasses</Filter>
+    </ClCompile>
+    <ClCompile Include="Archer.cpp">
+      <Filter>Source Files\PlayerClasses</Filter>
+    </ClCompile>
+    <ClCompile Include="Mage.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -62,11 +71,20 @@
     <ClInclude Include="Vector.h">
       <Filter>Header Files\Additional</Filter>
     </ClInclude>
-    <ClInclude Include="Player.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Inventory.h">
       <Filter>Header Files\Equipment</Filter>
+    </ClInclude>
+    <ClInclude Include="Player.h">
+      <Filter>Header Files\PlayerClasses</Filter>
+    </ClInclude>
+    <ClInclude Include="Warrior.h">
+      <Filter>Header Files\PlayerClasses</Filter>
+    </ClInclude>
+    <ClInclude Include="Archer.h">
+      <Filter>Header Files\PlayerClasses</Filter>
+    </ClInclude>
+    <ClInclude Include="Mage.h">
+      <Filter>Header Files\PlayerClasses</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
