added a tutorial function(prints instructions for the game) and new comments

--- a/ProjectOOPTeam14/ProjectOOPTeam14.vcxproj.filters
+++ b/ProjectOOPTeam14/ProjectOOPTeam14.vcxproj.filters
@@ -57,14 +57,14 @@
     <ClCompile Include="Archer.cpp">
       <Filter>Source Files\PlayerClasses</Filter>
     </ClCompile>
-    <ClCompile Include="Mage.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="Menu.cpp">
       <Filter>Source Files\Areana</Filter>
     </ClCompile>
     <ClCompile Include="Areana.cpp">
       <Filter>Source Files\Areana</Filter>
+    </ClCompile>
+    <ClCompile Include="Mage.cpp">
+      <Filter>Source Files\PlayerClasses</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
