--- a/ProjectOOPTeam14/ProjectOOPTeam14.vcxproj
+++ b/ProjectOOPTeam14/ProjectOOPTeam14.vcxproj
@@ -146,6 +146,7 @@
     <ClCompile Include="Bow.cpp" />
     <ClCompile Include="Breastplate.cpp" />
     <ClCompile Include="Helmet.cpp" />
+    <ClCompile Include="Inventory.cpp" />
     <ClCompile Include="Item.cpp" />
     <ClCompile Include="Mage.cpp" />
     <ClCompile Include="Main.cpp" />
